--- a/multi-period/manuscript.tex
+++ b/multi-period/manuscript.tex
@@ -78,7 +78,7 @@
 %%            country={}}
 %% \fntext[label3]{}
 
-\title{Multi-product Batch Processing Time Maximization Problem}
+\title{Multi-period and Multi-product Batch Processing Time Maximization Problem}
 
 %% use optional labels to link authors explicitly to addresses:
 %% \author[label1,label2]{}
@@ -96,25 +96,11 @@
 %%             state={},
 %%             country={}}
 
-%\author{Tatiana Balbi Fraga, Ítalo Ruan Barbosa de Aquino and Regilda da Costa e Silva Menêzes}
+%\author{Tatiana Balbi Fraga}
 
 \author{Tatiana Balbi Fraga\corref{cor1}\fnref{label1}}
 \ead{tatiana.balbi@ufpe.br}
 \cortext[cor1]{corresponding author}
-
-\author{Ítalo Ruan Barbosa de Aquino\fnref{label1}}
-\ead{italo_ruan_@hotmail.com}
-
-\author{Regilda da Costa e Silva Menêzes\fnref{label1}}
-\ead{regilda.smenezes@ufpe.br}
-
-%\affiliation[label1]{
-%			 organization={Centro Acadêmico do Agreste - Universidade Federal de Pernambuco},
-%             addressline={Avenida Marielle Franco, Bairro Nova Caruaru},
-%             city={Caruaru},
-%             postcode={55014-900},
-%             state={PE},
-%             country={Brasil} }
 
 \affiliation[label1]{
 		   organization={Agreste Academic Center - Federal University of Pernambuco},%Department and Organization
@@ -125,23 +111,23 @@
            country={Brazil}}
 
 \begin{abstract}
-In the plastic bag extrusion process, it is necessary to determine the optimal processing time for batches formed by different products, which are processed simultaneously by the same extruder, but with different processing rates. The batch processing time must be determined in order to meet a series of known constraints, such as the limitation for the quantity produced for each product and for the quantity produced for the set of all products in the same batch. In this paper we present this problem as a new combinatorial optimization problem named Multi-product Batch Processing Time Maximization (MPBPTM) problem. We also present a mathematical model for the MPBPTM problem and an analytical solution method with polynomial time complexity, which proved to be able to obtain optimal solutions for several benchmarks in a very short time, even for very large instances.
+...
 \end{abstract}
 %%Graphical abstract
 \begin{graphicalabstract}
-\includegraphics[width=0.8\textwidth]{graphical.png}
+%\includegraphics[width=0.8\textwidth]{graphical.png}
 \end{graphicalabstract}
 
 %%Research highlights
 \begin{highlights}
-\item brief bibliographic review on multi-product batch problems;
-\item new combinatorial optimization problem named Multi-product Batch Processing Time Maximization (MPBPTM) problem;
-\item linear integer programming model for the MPBPTM problem;
-\item exact optimization method for solving the MPBPTM problem.
+\item ...;
+\item ...;
+\item ...;
+\item ....
 \end{highlights}
 
 \begin{keyword}
-multiproduct batch \sep processing time maximization \sep analytical solution \sep C++ \sep LINGO
+multiproduct batch \sep processing time maximization \sep C++ \sep LINGO
 \end{keyword}
 \end{frontmatter}
 
@@ -151,31 +137,41 @@ multiproduct batch \sep processing time maximization \sep analytical solution \s
 \section{Introduction}
 \label{sec:intro}
 
-The scientific literature presents several papers that address multi-product batch problems. Many works target the problem of multi-product batch scheduling (MPBS), in which it is necessary to determine the production sequence of the products and the ideal batch size for each product, in a production of several products which share the same production facilities and for which demand is known \citep{Eilon1985}. In this problem, a single product is processed at a time, so it is necessary that the quantity produced is sufficient to meet the demand during the period in which other products are being processed. The solution must be determined in such a way that both setup and storage costs are minimized. Among the authors who addressed this problem are \cite{Eilon1985}, \cite{Omega1993} and \cite{LiuEtAl2020}. \cite{MendezEtAll2000} and \cite{ShiEtAll2017} present two parallel multi-product batch scheduling (PMPBS) problems, in which production units of the same type are arranged in parallel, forming each production stage. In this case, it is also necessary to define in which units each product will be processed. The authors also take into account other constraints for the problem (\emph{e.g.}, release time and due date for the products, and sequencing constraints due to mismatched product colors sequences) and other goals (\emph{i.e.}, optimize customer satisfaction and/or the plant performance). In the papers mentioned above, production in a single unit or in a serial flowshop plant is considered, in which all products follow a linear flow through the production stages. \cite{KimEtAl1996} consider the multi-product batch problem in networked processes. As defined by the authors, in this case, the production units are not arranged in lines, and the connection between the units may or may not exist. Therefore, the production paths in the flowshop network can be different for each product. Also the passing of previous batch can be possible so that the final sequence of the production at the last stage units can be different from the initial sequence. In all papers presented above, each batch contains only one product type, and each machine can process only one batch (or product type) at a time. \cite{LiEtAl2022} deal with a PMPBS problem involving incompatible families with different job sizes and capacity constraints. In this problem, solutions are accepted in which two or more batches are processed simultaneously on the same machine. However, there are no production limitations for the production of each product group. The paper of \cite{LiEtAl2022} also presente an extensive literature review on production batch scheduling problems. Other important works deal with the problem of a multi-product batch plant design (MPBPD). In this case the problem is to obtain the configuration of the plant and the equipment that minimize the capital cost of all the equipment items needed to fulfill the production requirements (Ravemark and Rippin, 1998).
+T....
 
-In this work, we are concerned with determining the ideal processing time for a single batch consisting of a set of products, each product being or not different from the other products of the same batch. That is, we consider a specific case where different products are processed simultaneously on the same processor. This case occurs, for example, during the processing of plastic bags in extruders, where the resins are melted, then pass through a cylinder forming a balloon and this balloon, after cooling, is stored in a coil which, in turn, is cut into several smaller coils with different models of plastic bags.
-
-As scientific contributions, in this paper we define a new multi-product batch problem, named multi-product batch processing time maximization (MPBPTM) problem, as well as a mathematical model and a polynomial time complexity analytical solution optmization method for solving this problem.
+As scientific contributions,....
 
 In the next sections, a presentation of problem is made along with an application example. Section \ref{sec:mathModel} presents an interger linear mathematical model for the problem and section \ref{sec:analyticalSol} presents an analytical method for its solution. Section \ref{sec:results} presents the tests and results obtained by a solver in C++ applying the analytical solution and a solver developed in LINGO to new proposed benchmarks. In sections \ref{sec:contributions} and \ref{sec:acknowledgments}, the contributions to this work are informed and acknowledgments are given, respectively. Finally, section \ref{sec:conclusions} presents the paper's conclusions and suggestions for future works.
 
-\section{Multi-product batch processing time maximization problem}
+\section{Multi-period and multi-product batch processing time maximization problem}
 \label{sec:MBPTMP}
 
-The multi-product batch processing time maximization problem arises when a set of different products are processed simultaneously in a same production batch. In this problem, it is considered that the quantity produced of each product is directly proportional to the processing time, however, with a different constant of proportionality (production rate) for each product. In addition, there is a maximum quantity allowed for the production of batch products, defined both individually and for the set. The maximum production quantity of each product is mainly defined according to the demand for the product. However, it is still possible to stock the products and/or send them to the outlets. In both cases, there is a stocking/shipping limit for each product and a stocking/shipping limit for the set of products in the batch. Also, there is a time limit available for processing the batch. The problem consists of defining the maximum processing time for the batch, respecting the limitations related to the quantities produced. For a better understanding of the problem, an example is presented below.
+In MPMPBPTM problem consideramos um horizonte de planejamento com $\textrm{ND}$ dias ($\textrm{ND} \geq 1$) e uma demanda diária ($\textrm{UD}_{id} \geq 0$) durante este período para cada produto do lote considerado. Adicionalmente, já existe um plano de produção prévio, de forma que é possível que já exista uma programação anterior de produção para cada produto do lote. Assim a disponibilidade para estocagem e para envios para as lojas de fábrica ficará sujeita a alteração de acordo com o planejamento prévio de produção.
 
-\emph{Example:} A certain machine must process a batch containing 2 different products: A and B. The production rate of A is 60 g/min while the production rate of B is 40 g/min. The factory has free stock for a maximum of 3000 g of any product, and, according to the company's inventory policy, a maximum of 3000 g of product A and 2000 g of product B can be stocked at the factory. There is a demand for 1000 g of product A and 500 g of product B. The factory has an outlet that has free space in stock of 1000 g, which can receive a maximum of 600 g of each product. A maximum time of 100 minutes of this machine can be allocated for processing this batch. What is the maximum possible time for processing this batch ? 
+O problema consiste em determinar a tempo máximo de processamento para o lote considerado, levando em conta as restrições de limite consideradas.  
+
+A seção a seguir apresenta um modelo matemático para este problema.
 
 \section{Mathematical model}
 \label{sec:mathModel}
 
 Given that: \\
 
-$\textrm{UD}_i$ is the demand for the product $i$;
+$\textrm{UD}_{id}$ is the demand for the product $i$ on day $d$;
 
-$\textrm{I}$ is the maximum quantity allowed for additional factory storage of all products in the batch;
+$\textrm{PO}_{id}$ is the planned production of the product $i$ on day $d$;
 
-$\textrm{UI}_i$ is the maximum quantity allowed for stocking the product $i$ in the factory;
+$\textrm{I}_{0}$ is the initial free factory storage of product $i$ on the beginning of the (\emph{first}) planning day; 
+
+
+
+
+$\textrm{UI}_{i0}$ is the maximum quantity allowed for stocking in the factory the product $i$ on the (\emph{first}) planning day; \\
+
+
+$\textrm{I}_{id}$ is the maximum quantity allowed for additional factory storage of all products on day $d$;
+
+$\textrm{UI}_{id}$ is the maximum quantity allowed for stocking in the factory the product $i$ on day $d$;
 
 $\textrm{O}$ is the maximum quantity allowed for shipment of all products to outlets;
 
@@ -183,15 +179,15 @@ $\textrm{UO}_i$ is the maximum amount of product $i$ that can be shipped to outl
 
 $\textrm{p}_i$ is the production rate of product $i$;
 
-$\textrm{Z}$ is the timeout for batch processing;
+$\textrm{Z}$ is the timeout for batch processing; \\
 
-$P_i$ is the amount of product $i$ produced;
+$P_i$ is the amount of product $i$ to be produced on batch;
 
-$D_i$ is the amount of product $i$ delivered for the demand;
+$D_{id}$ is the amount of product $i$ delivered for the demand on day $d$;
 
-$O_i$ amount of product $i$ shipped to factory outlets;
+$O_{id}$ amount of product $i$ shipped to factory outlets;
 
-$I_i$ is the amount of product $i$ that will be stored at the factory;
+$I_{id}$ is the amount of product $i$ that will be stored at the factory on day $d$;
 
 $T$ is the batch processing time. \\
 
@@ -208,27 +204,30 @@ P_i - \textrm{p}_i * T  = 0 \quad \forall i
 \end{equation}
 
 \begin{equation}
-P_i - D_i - O_i - I_i = 0 \quad \forall i
+P_i + UI_{i1} - D_{i1} - O_{i1} = \textrm{I}_{0} - \textrm{PO}_{i1}
 \end{equation}
 
 \begin{equation}
-D_i \leq \textrm{UD}_i \quad \forall i
+UI_{id} - UI_{i(d-1)} - D_{id} - O_{id} = - \textrm{PO}_{id} \quad \forall i, \forall (d>1)
 \end{equation}
 
 \begin{equation}
-O_i \leq \textrm{UO}_i \quad \forall i
 \end{equation}
 
 \begin{equation}
-\sum_i{O_i} \leq \textrm{O}
+\sum_{d}{O_{id}} \leq \textrm{UO}_i \quad \forall i
 \end{equation}
 
 \begin{equation}
-I_i \leq \textrm{UI}_i \quad \forall i
+\sum_{i}{\sum_{d}{O_{id}}} \leq \textrm{O}
 \end{equation}
 
 \begin{equation}
-\sum_i{I_i} \leq \textrm{I}
+D_{i1} \leq \textrm{UD}_{i1} \quad \forall i
+\end{equation}
+
+\begin{equation}
+D_{id} \leq \sum_{k=1}^{d}{\textrm{UD}_{ik}} - \sum_{k=1}^{d-1}{D_{ik}}  \quad \forall i, \forall d>1
 \end{equation}
 
 \begin{equation}
@@ -236,7 +235,7 @@ T \leq \textrm{Z}
 \end{equation}
 
 \begin{equation}
-T, D_i, O_i, I_i \in  \mathbb{Z}^+ \quad \forall i
+UI_{id}, O_{id}, D_{id} \in  \mathbb{Z}^+ \quad \forall i,d
 \end{equation}
 
 where: \\
